2013-10-25  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #9954]
	* sysdeps/posix/getaddrinfo.c (rfc3484_sort): do not assign native
	result if the result has no associated interface.
	* sysdeps/posix/getaddrinfo.c (getaddrinfo): correctly detect
	interface for all 127.X.Y.Z addresses.

2013-09-23  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15754]
	* sysdeps/generic/stackguard-macros.h: If PTRGUARD_LOCAL use
	__pointer_chk_guard_local, otherwise __pointer_chk_guard.
	* elf/Makefile: Define CFLAGS-tst-ptrguard1-static.c.

2013-09-23  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15754]
	* elf/Makefile (tests): Add tst-ptrguard1.
	(tests-static): Add tst-ptrguard1-static.
	(tst-ptrguard1-ARGS): Define.
	(tst-ptrguard1-static-ARGS): Define.
	* elf/tst-ptrguard1.c: New file.
	* elf/tst-ptrguard1-static.c: New file.
	* sysdeps/x86_64/stackguard-macros.h: Define POINTER_CHK_GUARD.
	* sysdeps/i386/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc32/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc64/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-32/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-64/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc32/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc64/stackguard-macros.h: Likewise.

2013-09-23  Hector Marco  <hecmargi@upv.es>
	    Ismael Ripoll  <iripoll@disca.upv.es>
	    Carlos O'Donell  <carlos@redhat.com>

	[BZ #15754]
	* sysdeps/generic/stackguard-macros.h: Define
	__pointer_chk_guard_local and POINTER_CHK_GUARD.
	* csu/libc-start.c [!SHARED && !THREAD_SET_POINTER_GUARD]:
	Define __pointer_chk_guard_local.
	(LIBC_START_MAIN) [!SHARED]: Call _dl_setup_pointer_guard.
	Use THREAD_SET_POINTER_GUARD or set __pointer_chk_guard_local.

2013-09-23  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14547]
	* string/tst-strcoll-overflow.c: New test case.
	* string/Makefile (xtests): Add tst-strcoll-overflow.
	* string/strcoll_l.c (STRCOLL): Skip allocating memory for